--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -13,15 +13,15 @@
    "source": [
     "## Question 1\n",
     "\n",
-    "On utilise la methode de la sépertion des  \\bar uarialble: $ \\bar u(x,y)=\\alpha(x)\\ \\bar uarphi(y)$. Avec $\\rho=1$ et $f=0$, on a\n",
+    "On utilise la methode de la sépertion des  varialble: $ v(x,y)=\\alpha(x)\\varphi(y)$. Avec $\\rho=1$ et $f=0$, on a\n",
     "$$\n",
     "\\begin{align}\n",
     "-\\Delta (\\alpha(x)\\varphi(y))-\\omega^2\\alpha(x)\\varphi(y)&=0 \\\\\n",
-    "-\\frac{\\Delta \\alpha}{\\alpha}=\\omega^2+\\frac{\\Delta\\varphi}{\\ \\bar uarphi}&=C\n",
+    "-\\frac{\\Delta \\alpha}{\\alpha}=\\omega^2+\\frac{\\Delta \\varphi}{ \\varphi}&=C\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "Pour la  \\bar uariable $y$, on a:\n",
+    "Pour la  variable $y$, on a:\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\begin{cases}\n",
@@ -189,11 +189,9 @@
     "$$\n",
     "\\begin{align}\n",
     "\\int_{\\mathscr O} \\Delta u_s e^{+i \\omega x} dz &= \\int_{\\mathscr O} \\nabla \\cdot (\\nabla u_s) e^{+i \\omega x} dz \\\\\n",
-    "  &= \\int_{\\mathscr O} \\nabla \\cdot (\\nabla u_se^{+i \\omega x} ) dz-\\int_{\\mathscr O} \\nabla u_s \\cdot (\\nabla e^{+i \\omega x} ) dz\\\\\n",
-    "    &= \\int_{\\partial \\mathscr O}  \\nabla u_s e^{+i \\omega x}  \\cdot nd\\Gamma-i\\omega\\int_{\\mathscr O} \\frac{\\partial u_s}{\\partial x} e^{+i \\omega x}  dz\\\\\n",
-    "    &= \\int_{\\Sigma_L}  \\frac{\\partial u_s}{\\partial n} e^{+i \\omega x}  dy-i\\omega\\int dy\\int \\frac{\\partial u_s}{\\partial x} e^{+i \\omega x}  dx\\\\\n",
-    "    &= \\int_{\\Sigma_L}  \\frac{\\partial u_s}{\\partial n} e^{+i \\omega x}  dy-i\\omega\\int dy\\int (\\frac{\\partial }{\\partial x} (u_se^{+i \\omega x})- u_s \\frac{\\partial e^{+i \\omega x}}{\\partial x})dx\\\\\n",
-    "    &= \\int_{\\Sigma_L}  \\frac{\\partial u_s}{\\partial n} e^{+i \\omega x}  dy-i\\omega  \\int (u_se^{+i \\omega x})|_{-L}^{L}dy-i\\omega^2 \\int dy \\int u_s  e^{+i \\omega x}dx\\\\\n",
+    "    &= \\int_{\\mathscr O} \\nabla \\cdot (\\nabla u_se^{+i \\omega x} ) dz-\\int_{\\mathscr O} \\nabla u_s \\cdot (\\nabla e^{+i \\omega x} ) dz\\\\\n",
+    "    &= \\int_{\\mathscr O} \\nabla \\cdot (\\nabla u_se^{+i \\omega x} ) dz-\\int_{\\mathscr O} \\nabla  \\cdot (u_s\\nabla e^{+i \\omega x} ) dz+\\int_{\\mathscr O} u_s\\Delta e^{+i \\omega x}  dz\\\\\n",
+    "    &= \\int_{\\partial \\mathscr O}  (\\nabla u_s e^{+i \\omega x}-u_s\\nabla e^{+i \\omega x}  )\\cdot nd\\Gamma-\\omega^2 \\int_{\\mathscr O} u_s  e^{+i \\omega x}dz\\\\\n",
     "    &= I^- -\\omega^2 \\int_{\\mathscr O} u_s  e^{+i \\omega x}dz.\\\\\n",
     "\\end{align}\n",
     "$$\n",
@@ -421,30 +419,47 @@
     "i&=\\sum_i \\frac{\\mu_i^2 e^{i \\omega}}{8}\\\\\n",
     "\\sum_i\\mu_i^2&=8ie^{-i \\omega} .\n",
     "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "Une fois on a fixées $\\mu^i$, on a des équations: $\\mu_i=\\mu^0_i+\\tau_1 \\mu^1_i+\\tau_2 \\mu^2_i$.\n",
-    "\n",
-    "Prenons $i=1,2$, on resouds la système linaire, alors\n",
-    "$$\n",
-    "\\begin{equation}\n",
-    "\\begin{cases}\n",
-    "\\tau_1=\n",
-    "\\end{cases}\n",
-    "\\end{equation}\n",
     "$$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Question 10\n",
+    "\n",
+    "De $0=R^{\\epsilon}$ on a\n",
+    "$$0 = dR^{\\epsilon}(0)(\\mu) +\\tilde{R}^{\\epsilon}.$$\n",
+    "\n",
+    "$dR^{\\epsilon}(0)(\\mu)$ est évidement linaire, donc\n",
+    "$$dR^{\\epsilon}(0)(\\mu)=dR^{\\epsilon}(0)(\\mu^0+\\tau^1\\mu^1+\\tau^2\\mu^2)=\\tau^1+i\\tau^2.$$\n",
+    "\n",
+    "Alor,\n",
+    "\n",
+    "$$\\tau^1+i\\tau^2 =2(\\tau^1+i\\tau^2) +   \\tilde{R}^{\\epsilon}.$$\n",
+    "\n",
+    "C'est à dire,\n",
+    "\n",
+    "$$G^\\epsilon(x,y)=(2x+Re(\\tilde{R}^{\\epsilon}),2y+Im(\\tilde{R}^{\\epsilon}))$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 11"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 12"
+   ]
   }
  ],
  "metadata": {
