--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -451,14 +451,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 11"
+    "## Question 11\n",
+    "\n",
+    "Si $\\mu=0$, $0=\\mu^0+\\tau^1 \\mu^1 +\\tau^2 \\mu^2$. C'est un système linaire qui a plus de équations que les variables donc pour $\\mu^i$ fixées, il n'existe pas une solution. Sauf que $\\mu^0$ est la combinaison linaire de $\\mu^1$ et $\\mu^2$. Mais on sait que $dR^{\\epsilon}(0)$ est bijective et $0$ ne peut pas être la combinaison linaire de $1$ et $i$ sauf que $\\tau^1=\\tau^2=0$, donc ça ne peut pas être le cas."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 12"
+    "## Question 12\n",
+    "\n",
+    "On sait que,\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\tilde{R}^{\\epsilon}&=\\frac{i \\omega}{2} \\int_{\\mathscr O} \\mu u_s^\\epsilon  e^{+i \\omega x}  dz\\\\\n",
+    "&=\\frac{i \\omega}{2} \\int_{\\mathscr O} (\\mu_1+\\mu_2+\\mu_3+\\mu_4) u_s^\\epsilon  e^{+i \\omega x}  dz\\\\\n",
+    "&= \\sum_{i=1}^4(\\mu_1+\\mu_2+\\mu_3+\\mu_4)\\frac{i \\omega}{2} \\int_{\\mathscr O_i} u_s^\\epsilon  e^{+i \\omega x}  dz\\\\\n",
+    "&= \\sum_{i=1}^4(\\mu_i p^i)\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "De $\\tilde{R}^{\\epsilon}=0$, on a $0=\\sum_i (\\frac{\\mu_i e^{i \\omega}}{8}+\\mu_i p^i)$ qui est une identité complexe du dimension 2. Donc il reste 2-dimension dans $\\mu$ qui est cohérent avec l'assumption qu'on a fait dans la question 9."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 13\n",
+    "\n",
+    "Voyez *Solution.edp*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 14\n",
+    "\n",
+    "Soit $\\vec \\tau_{n}=\\tau^1_{n}+i\\tau_{n}^2$, \n",
+    "\n",
+    "$$\n",
+    "\\vec \\tau_{n+1}=G^\\epsilon(\\vec \\tau_{n})\n",
+    "=2(\\tau^1_{n}+i\\tau_{n}^2) +   \\tilde{R}_n^{\\epsilon}\n",
+    "=2(\\tau^1_{n}+i\\tau_{n}^2) +   {R}_n^{\\epsilon}/\\epsilon - dR^{\\epsilon}(0)(\\tau^1_{n}+\\tau_{n}^2)\n",
+    "=\\tau^1_{n}+i\\tau_{n}^2 +   {R}^{\\epsilon}/\\epsilon\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 15"
    ]
   }
  ],
