--- a/Solution.ipynb
+++ b/Solution.ipynb
@@ -211,7 +211,7 @@
    "metadata": {},
    "source": [
     "## Question 5\n",
-    "Une côté, on a:\n",
+    "D'un côté, on a:\n",
     "$$\n",
     "\\begin{align}\n",
     "T^{\\pm} u_s &= \\sum_{n=0}^{+\\infty} \\beta_n \\cos(n \\pi y) \\int_{\\{\\pm L\\} \\times (0,1)} u_s(z) \\cos(n \\pi y)  dy\\\\\n",
@@ -232,7 +232,7 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "L'autre côté:\n",
+    "D'un autre côté:\n",
     "$$\n",
     "\\begin{align}\n",
     " \\frac{\\partial}{\\partial n} u_s &=\\pm \\frac{\\partial}{\\partial x} (s^\\pm e^{\\pm i\\omega x}+\\sum_{n=1}^{+\\infty}\\alpha_m^\\pm e^{\\mp \\sqrt{(n\\pi)^2 - \\omega^2} x} \\cos(n\\pi y))\\\\\n",
@@ -257,7 +257,7 @@
     "## Question 6\n",
     "On voit que \n",
     "$$\n",
-    "\\int _{\\Omega _L} (\\Delta u + \\omega^2 \\rho  u) v d \\Omega=\\int _{\\Omega _L} f v d \\Omega .\n",
+    "\\int _{\\Omega _L} (\\Delta u + \\omega^2 \\rho  u) v d \\Omega=0 .\n",
     "$$\n",
     "En utilisant l'intergration par parties, on a\n",
     "$$ \n",
@@ -272,27 +272,18 @@
     "\n",
     "\n",
     "$$\n",
-    "\\int _{\\Omega _L} (-\\nabla v\\nabla u+ \\omega^2 \\rho  uv)  d \\Omega+\\int _{\\partial \\Omega _L} v\\nabla u  \\cdot d\\Gamma=\\int _{\\Omega _L} f v d \\Omega .\n",
+    "\\int _{\\Omega _L} (-\\nabla v\\nabla u+ \\omega^2 \\rho  uv)  d \\Omega+\\int _{\\partial \\Omega _L} v\\nabla u  \\cdot d\\Gamma=0 .\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\int _{\\Omega _L} (-\\nabla v\\nabla u+ \\omega^2 \\rho  uv)  d \\Omega+\\int _{\\Sigma_L} v\\frac{\\partial u}{\\partial n} dy =\\int _{\\Omega _L} f v d \\Omega .\n",
+    "\\int _{\\Omega _L} (-\\nabla v\\nabla u+ \\omega^2 \\rho  uv)  d \\Omega+\\int _{\\Sigma_L} v\\frac{\\partial u}{\\partial n} dy =0 .\n",
     "$$\n",
     "\n",
-    "En sachant que \n",
-    "$$\\frac{\\partial u_s}{\\partial n}=T^{\\pm}u_s= s^\\pm i\\omega e^{\\pm i\\omega x}+\\sum_{n=1}^{+\\infty}\\alpha_m^\\pm (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{\\mp \\sqrt{(n\\pi)^2 - \\omega^2} x} \\cos(n\\pi y),\n",
-    "$$\n",
-    "on a :\n",
-    "$$\n",
-    "\\begin{align}\n",
-    "\\int _{\\Sigma_L} v\\frac{\\partial u}{\\partial n} dy &=\\int _{x=L} v\\frac{\\partial u_s}{\\partial x} dy-\\int_{x=-L} v\\frac{\\partial u_s}{\\partial x} dy+\\int _{x=L} v\\frac{\\partial u_i}{\\partial x} dy-\\int_{x=-L} v\\frac{\\partial u_i}{\\partial x} dy\\\\\n",
-    "&=\\int _{(0,1)} v(s^+ i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}\\alpha_m^+ (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)) dy+\\int _{x=L} v i\\omega e^{i\\omega L} dy\\\\\n",
-    "&-\\int_{(0,1)} v(s^-i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}\\alpha_m^- (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)) dy -\\int_{x=-L} v i\\omega e^{-i\\omega L}dy\\\\\n",
-    "&=\\int _{(0,1)} v((s^+-s^- )i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}(\\alpha_m^+ -\\alpha_m^-) (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y)+ i\\omega (e^{i\\omega L}-e^{-i\\omega L})) dy\n",
-    "\\end{align}\\\\\n",
-    "$$\n",
+    "En sachant que $\\frac{\\partial u_s}{\\partial n}=T^{\\pm}u_s$ on a :\n",
     "\n",
-    "et\n",
+    "$$\n",
+    "\\int _{\\Omega _L} (-\\nabla v\\nabla u+ \\omega^2 \\rho  uv)  d \\Omega+\\int _{L \\times (0,1)} vT^{+}u_s dy + \\int _{-L \\times (0,1)} vT^{-}u_s dy=0 .\n",
+    "$$\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -302,15 +293,12 @@
     "\\end{align}\\\\\n",
     "$$\n",
     "\n",
-    "soit\n",
-    "$$g(y)=\\gamma_{\\Sigma_L}(\\frac{\\partial u}{\\partial n})=(s^+-s^- )i\\omega e^{ i\\omega L}+\\sum_{n=1}^{+\\infty}(\\alpha_m^+ -\\alpha_m^-) (- \\sqrt{(n\\pi)^2 - \\omega^2})e^{- \\sqrt{(n\\pi)^2 - \\omega^2} L} \\cos(n\\pi y) + i\\omega (e^{i\\omega L}-e^{-i\\omega L})$$\n",
-    "\n",
     "on a\n",
     "$$\n",
     "\\begin{equation}\n",
     "\\begin{cases}\n",
-    "a(u_s,v)=\\int _{\\Omega _L} (\\nabla v\\nabla u_s- \\omega^2 \\rho  u_s v)  d \\Omega\\\\\n",
-    "l(v)=-\\int _{\\Omega _L} f v d \\Omega+\\int _{(0,1)} v g dy+\\int _{\\Omega _L} v( \\rho -1 )\\omega^2 e^{i\\omega x}  d \\Omega\n",
+    "a(u_s,v)=\\int _{\\Omega _L} (-\\nabla v\\nabla u_s+ \\omega^2 \\rho  u_s v)  d \\Omega+\\int _{L \\times (0,1)} vT^{+}u_s dy + \\int _{-L \\times (0,1)} vT^{-}u_s dy\\\\\n",
+    "l(v)=\\int _{\\Omega _L} v( \\rho -1 )\\omega^2 e^{i\\omega x}  d \\Omega\n",
     "\\end{cases}.\n",
     "\\end{equation}\n",
     "$$\n",
@@ -467,7 +455,7 @@
     "\\begin{align}\n",
     "\\tilde{R}^{\\epsilon}&=\\frac{i \\omega}{2} \\int_{\\mathscr O} \\mu u_s^\\epsilon  e^{+i \\omega x}  dz\\\\\n",
     "&=\\frac{i \\omega}{2} \\int_{\\mathscr O} (\\mu_1+\\mu_2+\\mu_3+\\mu_4) u_s^\\epsilon  e^{+i \\omega x}  dz\\\\\n",
-    "&= \\sum_{i=1}^4(\\mu_1+\\mu_2+\\mu_3+\\mu_4)\\frac{i \\omega}{2} \\int_{\\mathscr O_i} u_s^\\epsilon  e^{+i \\omega x}  dz\\\\\n",
+    "&= \\sum_{i=1}^4(\\mu_i)\\frac{i \\omega}{2} \\int_{\\mathscr O_i} u_s^\\epsilon  e^{+i \\omega x}  dz\\\\\n",
     "&= \\sum_{i=1}^4(\\mu_i p^i)\n",
     "\\end{align}\n",
     "$$\n",
